app/assets/stylesheets/kuhsaft/cms/application.css.sass
// This is a manifest file that'll automatically include all the stylesheets available in this directory
// and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
// the top of the compiled file, but it's generally better to create a new file per style scope.
// = require_self
// = require_tree .


$baseBorderRadius: 0px
$borderRadiusLarge: 0px
$borderRadiusSmall: 0px

@import bootstrap
// base styles

body
  // disable page skipping when changing tabs in page form
  overflow: scroll

h1
  margin-top: 1em
  margin-bottom: 0.5em
  font-size: 3.5em

form
  margin: 0 !important

// bootrap overrides

.breadcrumb
  background: #fff
  opacity: 0.4
  @include transition(all, 0.3s)

.breadcrumb:hover
  opacity: 1

.dropdown-menu
  text-align: left

.container.cms
  padding-top: 60px

.form-horizontal
  .help-block
    width: 470px
    margin-top: 0 !important

// modules

.brick-caption
  font-size: 1.25em

.brick-caption
  @extend .muted
  font-weight: normal
  font-style: italic

.brick-item-header
  background: #efefef
  padding: 0.5em

  .btn
    &.resize-toggler
      .icon-resize-small
        display: block
      .icon-resize-full
        display: none

      &.collapsed
        .icon-resize-small
          display: none
        .icon-resize-full
          display: block

.btn-toolbar
  margin-top: 0
  margin-bottom: 0

.brick-list
  padding-left: 2em

// The single column brick and the page-content (the "root") needs no level indentation
// It usually acts as a helper container and is therefore not relevant
// for the visual hierarchy
.kuhsaft-column-brick
  border: 0px solid #fff
  > .brick-item-childs
    > .brick-list
      padding-left: 0

#page-content
  padding-bottom: 6em
  > .brick-list
    padding-left: 0

.tab-content
  display: table
  width: 100%

.brick-item
  border: 1px solid #e3e3e3
  // collapse multiple borders
  margin: -1px
  background: #fff

  .brick-item-content.in
    padding: 1em

.empty-state
  margin: 1em

  .muted
    padding: 0.5em

.clear
  clear: both

.centered
  text-align: center

.actions
  margin-top: 1em
  margin-bottom: 1em
  text-align: right

.branch
  border-bottom: 1px solid #ccc
  padding: 0.35em 0

.unpublished
  a
    color: #666

.pages-list
  > .branch-group
    > .branch
      .branch-title
        font-weight: bold

.branch-group
  .branch-group
    .branch-title
      margin-left: 2em

    .branch-group
      .branch-title
        margin-left: 4em

      .branch-group
        .branch-title
          margin-left: 6em

#flash
  p
    margin: 0

.dropdown-menu
  > li
    > .control-group
      padding: 3px 20px

      .control-label
        font-weight: bold

.modal
  width: 900px
  margin-left: -450px

  .modal-body
    max-height: none

  #display-styles
    position: absolute
    top: 7px
    right: 15px

textarea.ckeditor
  height: 263px
  display: block !important
  visibility: show !important
  position: absolute

@import nestable
@import bootstrap-responsive
@import bootstrap_modal

